fix: enforce agent execution boundaries