@@ -6,15 +6,18 @@ import com.pico.agent.domain.ToolResult;
 import com.pico.experiment.domain.Experiment;
 import com.pico.port.Tool;
 import com.pico.port.ToolRegistry;
+import com.pico.shared.domain.DomainException;
 import org.springframework.stereotype.Component;
 
 import java.util.LinkedHashMap;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
 @Component
 public class ToolRegistryImpl implements ToolRegistry {
     private final Map<String, Tool> tools;
+    private final List<ToolDefinition> definitions;
 
     public ToolRegistryImpl(List<Tool> discoveredTools) {
         Map<String, Tool> byName = new LinkedHashMap<>();
@@ -24,12 +27,13 @@ public class ToolRegistryImpl implements ToolRegistry {
                 throw new IllegalStateException("Duplicate tool: " + name);
             }
         }
-        this.tools = Map.copyOf(byName);
+        this.tools = Collections.unmodifiableMap(new LinkedHashMap<>(byName));
+        this.definitions = this.tools.values().stream().map(Tool::definition).toList();
     }
 
     @Override
     public List<ToolDefinition> definitions() {
-        return tools.values().stream().map(Tool::definition).toList();
+        return definitions;
     }
 
     @Override
@@ -40,6 +44,9 @@ public class ToolRegistryImpl implements ToolRegistry {
         }
         try {
             return tool.execute(experiment, call.id(), call.arguments());
+        } catch (DomainException error) {
+            if (ShellTool.INDETERMINATE_EXECUTION.equals(error.code())) throw error;
+            return ToolResult.failure(call.id(), call.name(), error.getMessage());
         } catch (RuntimeException error) {
             return ToolResult.failure(call.id(), call.name(), error.getMessage() == null ? error.getClass().getSimpleName() : error.getMessage());
         }
